tests/baselines/reference/parserSuperExpression3.errors.txt
parserSuperExpression3.ts(3,10): error TS2339: Property 'super' does not exist on type 'C'.
parserSuperExpression3.ts(3,16): error TS2304: Cannot find name 'T'.


==== parserSuperExpression3.ts (2 errors) ====
    class C {
      M() {
        this.super<T>(0);
             ~~~~~
!!! error TS2339: Property 'super' does not exist on type 'C'.
                   ~
!!! error TS2304: Cannot find name 'T'.
      }
    }